# api/models/errorResponse.js
@@ -1,0 +1,9 @@
+class ErrorResponse {
+  constructor(status, message, causes) {
+    this.status = status;
+    this.message = message;
+    this.causes = causes;
+  }
+}
+
+module.exports = ErrorResponse;
