# api/models/index.js
@@ -1,0 +1,7 @@
+const SuccessfulResponse = require('./successfulResponse');
+const ErrorResponse = require('./errorResponse');
+
+module.exports = {
+  SuccessfulResponse,
+  ErrorResponse
+}
