# index.js
@@ -9,12 +9,12 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./api/swagger/swagger.json');
 const logger = require('./api/utils/loggerFactory').createLogger(__filename);
 const db = require('./api/db/models');
-const routers = require('./api/routers');
+const { usersRouter, cartsRouter } = require('./api/routers');
 const PORT = process.env.PORT || 9000;
 
 
-initializeModels();
 initializeExpress();
+initializeModels();
 
 app.listen(PORT, () => {
   logger.info(`Server listening on port ${PORT}`);
@@ -27,7 +27,8 @@ function initializeExpress() {
   app.use(bodyParser.json());
   app.use(bodyParser.urlencoded({ extended: true }));
   app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument, { explorer: true }));
-  app.use('/carts', routers.Carts);
+  app.use('/users', usersRouter);
+  app.use('/carts', cartsRouter);
 }
 
 async function initializeModels() {
@@ -36,12 +37,12 @@ async function initializeModels() {
     await db.Cart.sync();
     await db.CartItem.sync();
 
-    const user = await db.User.findOne({ where: { name: 'Barbi' } });
+    // const user = await db.User.findOne({ where: { name: 'Barbi' } });
     // const buyer = await db.User.create({name: 'Barbi', lastName: 'Blasco', userName: 'barblas'});
     // const cart = await db.Cart.create({status: 'open'});
     // cart.setBuyer(buyer);
     // const cart = await Cart.findOne({where: { user: user}});
-    console.log(await user.getCarts());
+    // console.log(await user.getCarts());
 
   } catch(err) {
     logger.error(`[message: error initializing models] [error: ${err}]`);
